# tonic-practice

./: .gitignore  Cargo.toml
prisma/: schema.prisma
prisma/migrations/20240308014950_init/: migration.sql
prisma/migrations/20240321194103_init/: migration.sql
proto/: helloworld.proto  shorturl.proto
src/: client.rs  data.rs  extractor.rs  lib.rs  server.rs  utils.rs
src/config/: app_config.rs  mod.rs
src/domain/: mod.rs
src/domain/features/: response.rs
src/middleware/: mod.rs
